small refactor regarding callback logic

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1640,22 +1640,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "تم حفظ الصورة بنجاح مع النسخة المعدلة.";
 "photo_edit_save_image_error_message" = "تعذر حفظ الملف.";
 "photo_edit_filter_original" = "أصلي";
-"photo_edit_filter_clarendon" = "فيلتره 2";
-"photo_edit_filter_metropolis" = "فيلتره 15";
-"photo_edit_filter_lime" = "فيلتره 10";
-"photo_edit_filter_adele" = "فيلتره 13";
-"photo_edit_filter_amazon" = "فيلتره 7";
-"photo_edit_filter_april" = "فيلتره 6";
-"photo_edit_filter_audrey" = "فيلتره 16";
-"photo_edit_filter_aweStruck" = "فيلتره 1";
-"photo_edit_filter_bluemess" = "فيلتره 12";
-"photo_edit_filter_cruz" = "فيلتره 14";
-"photo_edit_filter_haan" = "فيلتره 11";
-"photo_edit_filter_mars" = "فيلتره 4";
-"photo_edit_filter_oldMan" = "فيلتره 3";
-"photo_edit_filter_rise" = "فيلتره 5";
-"photo_edit_filter_starlit" = "فيلتره 8";
-"photo_edit_filter_whisper" = "فيلتره 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "تعديل";
 "photo_edit_light" = "ضوء";
 "photo_edit_color" = "لون";
@@ -1738,9 +1738,9 @@
 "widget_rule_7_3_small_button" = "افتح التجميع";
 "widget_rule_7_3_medium_detail" = "ما رأيك في تصنيف ذكرياتك بكل سهولة حسب جهات الاتصال والأشياء؟";
 "widget_rule_7_3_medium_button" = "افتح تجميع الوجه&الأشياء";
-"widget_rule_7_4_small_detail" = "يمكنك تجميع الذكريات الخاصة بك بكل سهولة وفقا لجهات الأتصال.";
+"widget_rule_7_4_small_detail" = "استمر في جمع ذكرياتك";
 "widget_rule_7_4_small_button" = "اكتشف";
-"widget_rule_7_4_medium_detail" = "ما رأيك في تصنيف ذكرياتك بكل سهولة حسب جهات الاتصال والأشياء؟";
+"widget_rule_7_4_medium_detail" = "استمر في جمع ذكرياتك";
 "widget_rule_7_4_medium_button" = "اكتشف";
 "billo_contactus_top_text" = "\"نشكركم لاختياركم لنا.سوف نشارك طلبكم مع فريق دعم ديجيسل Digicel.ديجيسل Digicelهي مشغل نعمل و متعاقدين معهم من أجل تطبيق Billo.سوف يتم القيام بتحليل مفصل لطلبك وسوف يتم مشاركة معلومات اتصالك ومعلومات استخدام Billo  و معلومات جهازك بالإضافة إلى بياناتك الشخصية التي قمت بتوضيحها بطلبكم إن وجدت مع ديجيسل Digicel.\"";
 "widget_rule_3_1_small_button" = "اعرض";
