--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1628,22 +1628,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "Das Foto wurde erfolgreich mit der bearbeiteten Version gespeichert.";
 "photo_edit_save_image_error_message" = "Die Datei konnte nicht gespeichert werden.";
 "photo_edit_filter_original" = "Original";
-"photo_edit_filter_clarendon" = "Filter 2";
-"photo_edit_filter_metropolis" = "Filter 15";
-"photo_edit_filter_lime" = "Filter 10";
-"photo_edit_filter_adele" = "Filter 13";
-"photo_edit_filter_amazon" = "Filter 7";
-"photo_edit_filter_april" = "Filter 6";
-"photo_edit_filter_audrey" = "Filter 16";
-"photo_edit_filter_aweStruck" = "Filter 1";
-"photo_edit_filter_bluemess" = "Filter 12";
-"photo_edit_filter_cruz" = "Filter 14";
-"photo_edit_filter_haan" = "Filter 11";
-"photo_edit_filter_mars" = "Filter 4";
-"photo_edit_filter_oldMan" = "Filter 3";
-"photo_edit_filter_rise" = "Filter 5";
-"photo_edit_filter_starlit" = "Filter 8";
-"photo_edit_filter_whisper" = "Filter 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Bearbeiten";
 "photo_edit_light" = "Licht";
 "photo_edit_color" = "Farbe";
@@ -1726,9 +1726,9 @@
 "widget_rule_7_3_small_button" = "Gruppierung Öffnen";
 "widget_rule_7_3_medium_detail" = "Wie wäre es, wenn Sie Ihre Erinnerungen einfach nach Personen und Objekten kategorisieren?";
 "widget_rule_7_3_medium_button" = "Öffnen Sie die Gruppierung von Gesichtern&Objekten";
-"widget_rule_7_4_small_detail" = "Sie können Ihre Erinnerungen leicht nach Personen gruppieren.";
+"widget_rule_7_4_small_detail" = "Sammle weiterhin deine Erinnerungen";
 "widget_rule_7_4_small_button" = "Entdecken";
-"widget_rule_7_4_medium_detail" = "Wie wäre es, wenn Sie Ihre Erinnerungen einfach nach Personen und Objekten kategorisieren?";
+"widget_rule_7_4_medium_detail" = "Sammle weiterhin deine Erinnerungen";
 "widget_rule_7_4_medium_button" = "Entdecken";
 "billo_contactus_top_text" = "\"Danke, daß du uns gewählt hast. Wir werden deine Anfrage an das Digicel-Support-Team weiterleiten. Digicel ist der Operator, mit dem wir für die Billo-Anwendung arbeiten. Um eine detaillierte Analyse deine Anfrage durchzuführen und eine schnelle Lösung bereitzustellen, werden die Geräteinformationen, Billo-Nutzungsinformationen und Kontaktinformationen zusätzlich zu den persönlichen Daten, die du in deiner Anfrage angegeben hast, an Digicel weitergegeben.\"";
 "widget_rule_3_1_small_button" = "Ansehen";
