--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1676,22 +1676,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "The photo is successfully saved as a modified version.";
 "photo_edit_save_image_error_message" = "The photo couldn't be saved.";
 "photo_edit_filter_original" = "Original";
-"photo_edit_filter_clarendon" = "Filter 2";
-"photo_edit_filter_metropolis" = "Filter 15";
-"photo_edit_filter_lime" = "Filter 10";
-"photo_edit_filter_adele" = "Filter 13";
-"photo_edit_filter_amazon" = "Filter 7";
-"photo_edit_filter_april" = "Filter 6";
-"photo_edit_filter_audrey" = "Filter 16";
-"photo_edit_filter_aweStruck" = "Filter 1";
-"photo_edit_filter_bluemess" = "Filter 12";
-"photo_edit_filter_cruz" = "Filter 14";
-"photo_edit_filter_haan" = "Filter 11";
-"photo_edit_filter_mars" = "Filter 4";
-"photo_edit_filter_oldMan" = "Filter 3";
-"photo_edit_filter_rise" = "Filter 5";
-"photo_edit_filter_starlit" = "Filter 8";
-"photo_edit_filter_whisper" = "Filter 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Adjust";
 "photo_edit_light" = "Light";
 "photo_edit_color" = "Color";
@@ -1774,9 +1774,9 @@
 "widget_rule_7_3_small_button" = "Enable Grouping";
 "widget_rule_7_3_medium_detail" = "What about organizing your memories by people?";
 "widget_rule_7_3_medium_button" = "Enable Face & Image Grouping";
-"widget_rule_7_4_small_detail" = "Group your memories easily by people.";
+"widget_rule_7_4_small_detail" = "Let's take a stroll down memory lane";
 "widget_rule_7_4_small_button" = "Check It Out";
-"widget_rule_7_4_medium_detail" = "What about organizing your memories by people?";
+"widget_rule_7_4_medium_detail" = "Let's take a stroll down memory lane";
 "widget_rule_7_4_medium_button" = "Check It Out";
 "billo_contactus_top_text" = "\"Thank you for contacting us. Your request will be transferred to Digicel, the operator we work with for the Billo application  in order to provide customer support. Your device details, Billo usage information and contact details will be shared with Digicel as well as well as any personal data that may be given by you.\"";
 "widget_rule_3_1_small_button" = "View";
