--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1670,22 +1670,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "La foto se ha guardado correctamente con la versión editada.";
 "photo_edit_save_image_error_message" = "No se pudo guardar el archivo.";
 "photo_edit_filter_original" = "Original";
-"photo_edit_filter_clarendon" = "Filtro 2";
-"photo_edit_filter_metropolis" = "Filtro 15";
-"photo_edit_filter_lime" = "Filtro 10";
-"photo_edit_filter_adele" = "Filtro 13";
-"photo_edit_filter_amazon" = "Filtro 7";
-"photo_edit_filter_april" = "Filtro 6";
-"photo_edit_filter_audrey" = "Filtro 16";
-"photo_edit_filter_aweStruck" = "Filtro 1";
-"photo_edit_filter_bluemess" = "Filtro 12";
-"photo_edit_filter_cruz" = "Filtro 14";
-"photo_edit_filter_haan" = "Filtro 11";
-"photo_edit_filter_mars" = "Filtro 4";
-"photo_edit_filter_oldMan" = "Filtro 3";
-"photo_edit_filter_rise" = "Filtro 5";
-"photo_edit_filter_starlit" = "Filtro 8";
-"photo_edit_filter_whisper" = "Filtro 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Editar";
 "photo_edit_light" = "Ligero";
 "photo_edit_color" = "Color";
@@ -1768,9 +1768,9 @@
 "widget_rule_7_3_small_button" = "Habilitar el agrupamiento";
 "widget_rule_7_3_medium_detail" = "¿Qué te parece organizar fácilmente tus recuerdos por persona o imágenes?";
 "widget_rule_7_3_medium_button" = "Habilita agrupamiento por rostro e imagen ";
-"widget_rule_7_4_small_detail" = "Agrupa tus recuerdos fácilmente por persona";
+"widget_rule_7_4_small_detail" = "Sigue recogiendo tus recuerdos";
 "widget_rule_7_4_small_button" = "Échale un vistazo";
-"widget_rule_7_4_medium_detail" = "¿Qué te parece organizar fácilmente tus recuerdos por persona o imágenes?";
+"widget_rule_7_4_medium_detail" = "Sigue recogiendo tus recuerdos";
 "widget_rule_7_4_medium_button" = "Échale un vistazo";
 "billo_contactus_top_text" = "\"Gracias por elegirnos. Compartiremos tu solicitud con el equipo de soporte de Digicel. Digicel es el operador contratado para la aplicación de Billo. A parte de los datos personales que especifique en tu solicitud, la información del dispositivo, la información de uso de Billo y los datos de contacto también se compartirán con Digicel para realizar un análisis detallado y proporcionar una solución rápida en tu caso.\"";
 "widget_rule_3_1_small_button" = "Ver";
