--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1628,22 +1628,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "Fotografia a fost salvată cu succes în versiunea editată.";
 "photo_edit_save_image_error_message" = "Fișierul nu a fost salvat.";
 "photo_edit_filter_original" = "Original";
-"photo_edit_filter_clarendon" = "Filtre 2";
-"photo_edit_filter_metropolis" = "Filtre 15";
-"photo_edit_filter_lime" = "Filtre 10";
-"photo_edit_filter_adele" = "Filtre 13";
-"photo_edit_filter_amazon" = "Filtre 7";
-"photo_edit_filter_april" = "Filtre 6";
-"photo_edit_filter_audrey" = "Filtre 16";
-"photo_edit_filter_aweStruck" = "Filtre 1";
-"photo_edit_filter_bluemess" = "Filtre 12";
-"photo_edit_filter_cruz" = "Filtre 14";
-"photo_edit_filter_haan" = "Filtre 11";
-"photo_edit_filter_mars" = "Filtre 4";
-"photo_edit_filter_oldMan" = "Filtre 3";
-"photo_edit_filter_rise" = "Filtre 5";
-"photo_edit_filter_starlit" = "Filtre 8";
-"photo_edit_filter_whisper" = "Filtre 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Editează";
 "photo_edit_light" = "Lumină";
 "photo_edit_color" = "Culoare";
@@ -1726,9 +1726,9 @@
 "widget_rule_7_3_small_button" = "Deschide Gruparea";
 "widget_rule_7_3_medium_detail" = "Ce zici de clasificarea ușoară a amintirilor în funcție de persoanele de contact și obiecte?";
 "widget_rule_7_3_medium_button" = "Deschide Gruparea Feţe&Obiecte";
-"widget_rule_7_4_small_detail" = "Iți poți  grupa cu ușurință amintirile după persoanele de contact.";
+"widget_rule_7_4_small_detail" = "Continuați să vă colectați amintirile";
 "widget_rule_7_4_small_button" = "Descoperă";
-"widget_rule_7_4_medium_detail" = "Ce zici de clasificarea ușoară a amintirilor în funcție de persoanele de contact și obiecte?";
+"widget_rule_7_4_medium_detail" = "Continuați să vă colectați amintirile";
 "widget_rule_7_4_medium_button" = "Descoperă";
 "billo_contactus_top_text" = "\"Îţi mulțumim că ne-ai ales. Vom partaja cererea ta cu echipa de asistență Digicel. Digicel este operatorul cu care colaborăm pentru aplicația Billo. Pentru a face o analiză detaliată a cererii tale  și pentru a oferi o soluție rapidă, pe lângă datele personale menționate în cerere, vor fi partajate  de asemenea cu Digicel şi informații despre dispozitiv, informații despre utilizarea Billo și informații de contact, dacă există.\"";
 "widget_rule_3_1_small_button" = "Afișează";
