--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1642,22 +1642,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "Фотография успешно сохранена в отредактированной версии.";
 "photo_edit_save_image_error_message" = "Не удалось сохранить файл.";
 "photo_edit_filter_original" = "Оригинал";
-"photo_edit_filter_clarendon" = "Фильтр 2";
-"photo_edit_filter_metropolis" = "Фильтр 12";
-"photo_edit_filter_lime" = "Фильтр 10";
-"photo_edit_filter_adele" = "Фильтр 13";
-"photo_edit_filter_amazon" = "Фильтр 7";
-"photo_edit_filter_april" = "Фильтр 6";
-"photo_edit_filter_audrey" = "Фильтр 16";
-"photo_edit_filter_aweStruck" = "Фильтр 1";
-"photo_edit_filter_bluemess" = "Фильтр 12";
-"photo_edit_filter_cruz" = "Фильтр 14";
-"photo_edit_filter_haan" = "Фильтр 11";
-"photo_edit_filter_mars" = "Фильтр 4";
-"photo_edit_filter_oldMan" = "Фильтр 3";
-"photo_edit_filter_rise" = "Фильтр 5";
-"photo_edit_filter_starlit" = "Фильтр 8";
-"photo_edit_filter_whisper" = "Фильтр 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Редактировать";
 "photo_edit_light" = "Свет";
 "photo_edit_color" = "Цвет";
@@ -1740,9 +1740,9 @@
 "widget_rule_7_3_small_button" = "Включить Группировку";
 "widget_rule_7_3_medium_detail" = "Как насчет того, чтобы легко организовать свои воспоминания по людям и объектам?";
 "widget_rule_7_3_medium_button" = "Включить Группировку Лиц&Объектов";
-"widget_rule_7_4_small_detail" = "Легко группируйте свои воспоминания по людям.";
+"widget_rule_7_4_small_detail" = "Продолжайте собирать свои воспоминания";
 "widget_rule_7_4_small_button" = "Проверьте Это";
-"widget_rule_7_4_medium_detail" = "Как насчет того, чтобы легко организовать свои воспоминания по людям и объектам?";
+"widget_rule_7_4_medium_detail" = "Продолжайте собирать свои воспоминания";
 "widget_rule_7_4_medium_button" = "Проверьте Это";
 "billo_contactus_top_text" = "\"Спасибо, что выбрали нас. Мы поделимся вашим запросом со службой поддержки Digicel. Digicel - это оператор, с которым мы сотрудничаем для приложения Billo. Для проведения подробного анализа вашего запроса и предоставления быстрого решения, информация об устройстве, информация об использовании Billo, контактная информация будут переданы Digicel в дополнение к персональным данным, которые вы указали в своем запросе.\"";
 "widget_rule_3_1_small_button" = "Просмотреть";
