--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1671,22 +1671,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "Fotoja u regjistrua  me sukses me versionin e redaktuar.";
 "photo_edit_save_image_error_message" = "Skedari nuk mund të regjistrohej.";
 "photo_edit_filter_original" = "Origjinale";
-"photo_edit_filter_clarendon" = "Filtri 2";
-"photo_edit_filter_metropolis" = "Filtri 15";
-"photo_edit_filter_lime" = "Filtri 10";
-"photo_edit_filter_adele" = "Filtri 13";
-"photo_edit_filter_amazon" = "Filtri 7";
-"photo_edit_filter_april" = "Filtri 6";
-"photo_edit_filter_audrey" = "Filtri 16";
-"photo_edit_filter_aweStruck" = "Filtri 1";
-"photo_edit_filter_bluemess" = "Filtri 12";
-"photo_edit_filter_cruz" = "Filtri 14";
-"photo_edit_filter_haan" = "Filtri 11";
-"photo_edit_filter_mars" = "Filtri 4";
-"photo_edit_filter_oldMan" = "Filtri 3";
-"photo_edit_filter_rise" = "Filtri 5";
-"photo_edit_filter_starlit" = "Filtri 8";
-"photo_edit_filter_whisper" = "Filtri 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Redakto ";
 "photo_edit_light" = "Dritë";
 "photo_edit_color" = "Ngjyrë";
@@ -1769,9 +1769,9 @@
 "widget_rule_7_3_small_button" = "Aktivizoje Grupimin";
 "widget_rule_7_3_medium_detail" = "Çfarë thua t’i kategorizosh me lehtësi kujtimet e tua sipas njerëzve dhe objekteve?";
 "widget_rule_7_3_medium_button" = "Aktivizoje Grupimin e Fytyrës&Objektit";
-"widget_rule_7_4_small_detail" = "Lehtësidht mund t'i gruposh  kujtimet e tua sipas personit.";
+"widget_rule_7_4_small_detail" = "Vazhdoni të grumbulloni kujtimet tuaja.";
 "widget_rule_7_4_small_button" = "Zbulo";
-"widget_rule_7_4_medium_detail" = "Çfarë thua t’i kategorizosh me lehtësi kujtimet e tua sipas njerëzve dhe objekteve?";
+"widget_rule_7_4_medium_detail" = "Vazhdoni të grumbulloni kujtimet tuaja";
 "widget_rule_7_4_medium_button" = "Zbulo";
 "billo_contactus_top_text" = "\"Faleminderit që na zgjodhët. Ne do ta ndajmë kërkesën tuaj me ekipin mbështetës Digicel. Digicel është operatori me të cilin ne punojmë për aplikacionin Billo. Ne do të bëjmë një analizë të hollësishme lidhur me kërkesën tënd dhe dhe për të jetë e mundur të sigurohet një zgjidhje të shpejtë, përveç të dhënave personale që ke specifikuar në kërkesën tënd, nëse ekzistojnë informacionet e tua e pajisjes informacionet e tua e përdorimit ‘’Billo’’ dhe informacionet e tua e komunikimit do të ndahen gjithashtu me Digicel.\"";
 "widget_rule_3_1_small_button" = "Shfaqe";
