--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1638,22 +1638,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "Fotoğraf düzenlenmiş versiyonu ile başarıyla kaydedildi.";
 "photo_edit_save_image_error_message" = "Dosya kaydedilemedi.";
 "photo_edit_filter_original" = "Orijinal";
-"photo_edit_filter_clarendon" = "Filtre 2";
-"photo_edit_filter_metropolis" = "Filtre 15";
-"photo_edit_filter_lime" = "Filtre 10";
-"photo_edit_filter_adele" = "Filtre 13";
-"photo_edit_filter_amazon" = "Filtre 7";
-"photo_edit_filter_april" = "Filtre 6";
-"photo_edit_filter_audrey" = "Filtre 16";
-"photo_edit_filter_aweStruck" = "Filtre 1";
-"photo_edit_filter_bluemess" = "Filtre 12";
-"photo_edit_filter_cruz" = "Filtre 14";
-"photo_edit_filter_haan" = "Filtre 11";
-"photo_edit_filter_mars" = "Filtre 4";
-"photo_edit_filter_oldMan" = "Filtre 3";
-"photo_edit_filter_rise" = "Filtre 5";
-"photo_edit_filter_starlit" = "Filtre 8";
-"photo_edit_filter_whisper" = "Filtre 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Düzenle";
 "photo_edit_light" = "Işık";
 "photo_edit_color" = "Renk";
@@ -1736,9 +1736,9 @@
 "widget_rule_7_3_small_button" = "Gruplamayı Aç";
 "widget_rule_7_3_medium_detail" = "Anılarını kişilere göre kategorize etmeye ne dersin?";
 "widget_rule_7_3_medium_button" = "Yüz&Nesne Gruplamayı Aç";
-"widget_rule_7_4_small_detail" = "Anılarını kişilere göre kolayca gruplayabilirsin.";
+"widget_rule_7_4_small_detail" = "Anılarını biriktirmeye devam et.";
 "widget_rule_7_4_small_button" = "Keşfet";
-"widget_rule_7_4_medium_detail" = "Anılarını kişilere göre kategorize etmeye ne dersin?";
+"widget_rule_7_4_medium_detail" = "Anılarını biriktirmeye devam et.";
 "widget_rule_7_4_medium_button" = "Keşfet";
 "billo_contactus_top_text" = "\"Bizi tercih ettiğin için teşekkürler. Talebini Digicel destek ekibi ile paylaşacağız. Digicel, Billo uygulaması için anlaşmalı çalıştığımız operatördür. Talebinle ilgili detaylı analiz yapıp hızlı çözüm sağlanabilmesi için varsa talebinde belirttiğin kişisel verilerin yanı sıra, cihaz bilgilerin, Billo kullanım bilgilerin ve iletişim bilgilerin de Digicel ile paylaşılacak.\"";
 "widget_rule_3_1_small_button" = "Görüntüle";
