--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1630,22 +1630,22 @@
 "photo_edit_save_as_copy_success_snackbar_message" = "Фотографія успішно збережена у відредагованою версії.";
 "photo_edit_save_image_error_message" = "Файл не збережено.";
 "photo_edit_filter_original" = "Оригінал";
-"photo_edit_filter_clarendon" = "Фільтр 2";
-"photo_edit_filter_metropolis" = "Фільтр 15";
-"photo_edit_filter_lime" = "Фільтр 10";
-"photo_edit_filter_adele" = "Фільтр 13";
-"photo_edit_filter_amazon" = "Фільтр 7";
-"photo_edit_filter_april" = "Фільтр 6";
-"photo_edit_filter_audrey" = "Фільтр 16";
-"photo_edit_filter_aweStruck" = "Фільтр 1";
-"photo_edit_filter_bluemess" = "Фільтр 12";
-"photo_edit_filter_cruz" = "Фільтр 14";
-"photo_edit_filter_haan" = "Фільтр 11";
-"photo_edit_filter_mars" = "Фільтр 4";
-"photo_edit_filter_oldMan" = "Фільтр 3";
-"photo_edit_filter_rise" = "Фільтр 5";
-"photo_edit_filter_starlit" = "Фільтр 8";
-"photo_edit_filter_whisper" = "Фільтр 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Редагувати";
 "photo_edit_light" = "Світ ";
 "photo_edit_color" = "Колір";
@@ -1728,9 +1728,9 @@
 "widget_rule_7_3_small_button" = "Відкрите Групування";
 "widget_rule_7_3_medium_detail" = "Як щодо легкої класифікації ваших спогадів за людьми та предметами?";
 "widget_rule_7_3_medium_button" = "Відкрите Групування Облич&Об’єктів";
-"widget_rule_7_4_small_detail" = "Ви можете легко згрупувати свої спогади за особами.";
+"widget_rule_7_4_small_detail" = "Продовжуйте збирати свої спогади";
 "widget_rule_7_4_small_button" = "Дізнайся";
-"widget_rule_7_4_medium_detail" = "Як щодо легкої класифікації ваших спогадів за людьми та предметами?";
+"widget_rule_7_4_medium_detail" = "Продовжуйте збирати свої спогади";
 "widget_rule_7_4_medium_button" = "Дізнайся";
 "billo_contactus_top_text" = "\"Дякуємо, що вибрали нас. Ми надішлемо ваш запит команді підтримки Digicel. Digicel - це оператор, з яким ми працюємо над додатком Billo. Для детального аналізу вашого запиту та швидкого рішення, якщо у вас є персональні дані, ви також можете надати інформацію про свій пристрій, інформацію про використання Billo та контактну інформацію. Це буде передано Digicel.\"";
 "widget_rule_3_1_small_button" = "Переглянути";
