--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -244,7 +244,7 @@ Is it "Use "this" to be the album cover?*/
 "Item Selected" = "Élément Sélectionné";
 "Upload" = "Télécharger";
 "You can change the sequence " = "Vous pouvez modifier l'ordre des photos";
-"Save" = "Sauvegarder";
+"Save" = "Enregistrer";
 "Add Music" = "Ajouter de la musique";
 
 /*Suggested: "Please choose music for your story"*/
@@ -264,7 +264,7 @@ Is it "Use "this" to be the album cover?*/
 
 /*story tbc*/
 "Sorry, but story name should not be empty" = "Veuillez donner un nom à votre story";
-"SAVE" = "Sauvegarder";
+"SAVE" = "Enregistrer";
 "Name" = "Nom";
 "Create a Name" = "Créer un Nom";
 "Delete device original" = "Supprimer l'original de l'appareil";
@@ -1934,22 +1934,22 @@ Please check I have understood the intended command here*/
 "photo_edit_save_as_copy_success_snackbar_message" = "La photo a été enregistrée avec succès avec la version retouchée.";
 "photo_edit_save_image_error_message" = "Le fichier n'a pas pu être enregistré.";
 "photo_edit_filter_original" = "Original";
-"photo_edit_filter_clarendon" = "Filtre 2";
-"photo_edit_filter_metropolis" = "Filtre 15";
-"photo_edit_filter_lime" = "Filtre 10";
-"photo_edit_filter_adele" = "Filtre 13";
-"photo_edit_filter_amazon" = "Filtre 7";
-"photo_edit_filter_april" = "Filtre 6";
-"photo_edit_filter_audrey" = "Filtre 16";
-"photo_edit_filter_aweStruck" = "Filtre 1";
-"photo_edit_filter_bluemess" = "Filtre 12";
-"photo_edit_filter_cruz" = "Filtre 14";
-"photo_edit_filter_haan" = "Filtre 11";
-"photo_edit_filter_mars" = "Filtre 4";
-"photo_edit_filter_oldMan" = "Filtre 3";
-"photo_edit_filter_rise" = "Filtre 5";
-"photo_edit_filter_starlit" = "Filtre 8";
-"photo_edit_filter_whisper" = "Filtre 9";
+"photo_edit_filter_clarendon" = "Istanbul";
+"photo_edit_filter_metropolis" = "Kingston";
+"photo_edit_filter_lime" = "Cairo";
+"photo_edit_filter_adele" = "Seoul";
+"photo_edit_filter_amazon" = "Barcelona";
+"photo_edit_filter_april" = "Rome";
+"photo_edit_filter_audrey" = "Toronto";
+"photo_edit_filter_aweStruck" = "Milan";
+"photo_edit_filter_bluemess" = "Vegas";
+"photo_edit_filter_cruz" = "New York";
+"photo_edit_filter_haan" = "Dubai";
+"photo_edit_filter_mars" = "Tokyo";
+"photo_edit_filter_oldMan" = "London";
+"photo_edit_filter_rise" = "Paris";
+"photo_edit_filter_starlit" = "Amsterdam";
+"photo_edit_filter_whisper" = "Bangkok";
 "photo_edit_adjust" = "Retoucher";
 "photo_edit_light" = "Lumière";
 "photo_edit_color" = "Couleur";
@@ -1986,14 +1986,14 @@ Please check I have understood the intended command here*/
 "digicel_feature_cancel_TO" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
 "digicel_feature_cancel_VU" = "Annuler ou gérer votre offre Lifebox dans My Digicel app";
 "digicel_feature_cancel_PG" = "Annuler ou gérer votre offre lifebox dans My Digicel app";
-"widget_rule_0_small_detail" = "Vous devez être connecté pour une sauvegarde ininterrompue.";
+"widget_rule_0_small_detail" = "Restez connecté pour profiter au maximum de lifebox.";
 "widget_rule_0_small_button" = "Connectez-vous";
-"widget_rule_0_medium_detail" = "Connectez-vous pour accéder aux dernières fonctionnalités de sauvegarde et de lifebox.";
+"widget_rule_0_medium_detail" = "Restez connecté pour profiter au maximum de lifebox.";
 "widget_rule_0_medium_button" = "Connectez-vous";
-"widget_rule_1_small_title" = "Votre quota de lifebox est plus de %d%%.";
-"widget_rule_1_small_detail" = "Il est temps de passer au top pack.";
-"widget_rule_1_small_button" = "Examinez";
-"widget_rule_1_medium_title" = "Votre quota de lifebox est plus de  %d%%.";
+"widget_rule_1_small_title" = "Vous avez atteint %d%% de votre quota";
+"widget_rule_1_small_detail" = "Passez à l'offre supérieure";
+"widget_rule_1_small_button" = "Voir les offres";
+"widget_rule_1_medium_title" = "Votre quota est quasiment atteint";
 "widget_rule_1_medium_detail" = "Il est temps de passer au top pack suivant.";
 "widget_rule_1_medium_button" = "Affichez les Abonnements";
 "widget_rule_2_small_title" = "La mémoire de votre appareil est presque pleine.";
@@ -2032,9 +2032,9 @@ Please check I have understood the intended command here*/
 "widget_rule_7_3_small_button" = "Ouvrez le Regroupement";
 "widget_rule_7_3_medium_detail" = "Que diriez-vous de classer facilement vos souvenirs en fonction des personnes et des objets?";
 "widget_rule_7_3_medium_button" = "Ouvrez le regroupement Visage&objet";
-"widget_rule_7_4_small_detail" = "Vous pouvez facilement regrouper vos souvenirs par personne.";
+"widget_rule_7_4_small_detail" = "Continuez à collecter vos souvenirs";
 "widget_rule_7_4_small_button" = "Découvriez";
-"widget_rule_7_4_medium_detail" = "Que diriez-vous de classer facilement vos souvenirs en fonction des personnes et des objets?";
+"widget_rule_7_4_medium_detail" = "Continuez à collecter vos souvenirs";
 "widget_rule_7_4_medium_button" = "Découvriez";
 "billo_contactus_top_text" = "\"Merci de nous avoir choisis. Nous partagerons votre demande avec l'équipe d'assistance Digicel. Digicel est l'opérateur avec lequel nous avons conclu un contrat pour l'application Billo. Afin de faire une analyse détaillée de votre demande et de fournir une solution rapide, le cas échéant, en plus des données personnelles que vous avez spécifiées dans votre demande, les informations sur l'appareil, les informations d'utilisation de Billo et les coordonnées seront également partagées avec Digicel.\"";
 "widget_rule_3_1_small_button" = "Vue";
