--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -202,6 +202,7 @@
 "Items Selected" = "Items Selected";
 "Item Selected" = "Item Selected";
 "Upload" = "Upload";
+"Upload Files" = "Upload Files";
 "You can change the sequence " = "You can change the sequence of photos ";
 "Save" = "Save";
 "Add Music" = "Add Music";
