--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -203,6 +203,7 @@
 "Item Selected" = "Item Selected";
 "Upload" = "Upload";
 "Upload Files" = "Upload Files";
+"Upload Music" = "Upload Music";
 "You can change the sequence " = "You can change the sequence of photos ";
 "Save" = "Save";
 "Add Music" = "Add Music";
