COF-570 Private Share - Adding Private Share to Sharing Menus

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -124,6 +124,7 @@
 "Share Via Link" = "Share via link";
 "Original Size" = "Original Size";
 "Small Size" = "Small Size";
+"private_share_option" = "Private Share";
 "Download" = "Download";
 "Sync" = "Sync";
 "Move" = "Move";
